@@ -48,3 +48,4 @@ Version 1.1
  - Fix up AssumeAwake Option for the Wakeup Class (Justin)
  - Update BeNext Tag Reader Config File (Alex)
  - Fixed Issue 335 - Update zwave.me KeyFob Config File (Alex)
+ - Fixed Issue 336 - Update Aeon Labs Multi Sensor Config File (Alex)
